--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "frontend": "pnpm --filter frontend",
+    "backend": "pnpm --filter backend"
   },
   "keywords": [],
   "author": "",
