--- a/pkgs/backend/package.json
+++ b/pkgs/backend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.9",
+    "dotenv": "^17.2.3",
     "hono": "^4.11.4",
     "jose": "^6.1.3"
   },
